# thepaint

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  SECURITY.md  TODO.md  alembic.ini  docker-compose.yml  optuna.db  pyproject.toml  railway.ingest.json  railway.json  railway.predict.json  railway.toml  requirements.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
chalk/: config.py  exceptions.py
chalk/api/: cache.py  (+5 more)
dashboard/: index.html  package-lock.json  package.json  railway.toml  vite.config.ts
docs/: OVERVIEW.md
models/: ast_ensemble_model.joblib  ast_lgbm_model.joblib  ast_model.joblib  ast_q10_model.joblib  ast_q25_model.joblib  ast_q50_model.joblib  ast_q75_model.joblib  ast_q90_model.joblib  blk_model.joblib  fg3m_lgbm_model.joblib  fg3m_model.joblib  pts_ensemble_model.joblib  pts_lgbm_model.joblib  pts_model.joblib  pts_q10_model.joblib  pts_q25_model.joblib  pts_q50_model.joblib  pts_q75_model.joblib  pts_q90_model.joblib  reb_ensemble_model.joblib  reb_lgbm_model.joblib  reb_model.joblib  reb_q10_model.joblib  reb_q25_model.joblib  reb_q50_model.joblib  reb_q75_model.joblib  reb_q90_model.joblib  stl_model.joblib  team_total_model.joblib  to_committed_model.joblib
scripts/: backfill.py  fix_player_names.py  ingest_recent.py  load_test.py  railway_ingest.py  railway_predict.py  refresh_2024_25.py  test_injury_agent.py  train_all.py  train_ensemble.py  validate_features.py
tests/: conftest.py  test_scaffold.py
(+105 files in other folders)
